# SWE241P

./: .gitignore  README.md
assignment1/: README.md
assignment2/: CMakeLists.txt
assignment2/include/: SearchUtils.h
assignment2/src/: Main.cpp  SearchUtils.cpp
assignment2/tests/: search_test.cpp
assignment3/: CMakeLists.txt
assignment3/include/: AnagramGrouper.h  SortUtils.h
assignment3/src/: AnagramGrouper.cpp  Main.cpp  SortUtils.cpp
assignment3/tests/: anagram_test.cpp
assignment4/: CMakeLists.txt
assignment4/include/: City.h  Graph.h
assignment4/src/: City.cpp  Graph.cpp  Main.cpp
assignment4/tests/: graph_test.cpp
assignment5/: CMakeLists.txt
assignment5/include/: NQueensSolver.h  PermutationCheck.h
assignment5/src/: Main.cpp  NQueensSolver.cpp  PermutationCheck.cpp
assignment5/tests/: recursion_backtracking_test.cpp
